--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "styles-applied",
+  "name": "react-typescript-workshop",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
